--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html {
   overflow-x: hidden;
 }
 
+
 .download-btn-first {
   background: #f7f7f7;
 }
@@ -177,7 +178,7 @@ html {
   font-size: 13px;
   padding-right: 7%;
   width: 70%;
-  color: #c7c7c7;
+  color: #b4b1b1;
   margin-top: 10px;
   line-height: 1.87em;
 }
@@ -439,7 +440,7 @@ html {
 .fh5co-bottom-outer {
   width: 100%;
   height: 572px;
-  background: url("../img/download-section-bg.jpg") no-repeat center;
+  background: url("../img/download-section-bg1.jpg") no-repeat center;
   margin-top: 120px;
   overflow-x: hidden;
 }
@@ -578,12 +579,21 @@ html {
   margin-left: 10px;
 }
 
+.img-logo {
+  width: 230px; /* Ancho de la imagen */
+}
+
 /* ==========================================================================================================
                                        RESPONSIVE STYLING
   ========================================================================================================== */
-@media screen and (max-width: 1400px) {
+
+  @media screen and (max-width: 1400px) {
   body {
     overflow-x: hidden;
+  }
+
+  .img-logo {
+    width: 200px; /* Ancho de la imagen */
   }
 
   .fh5co-hero-inner .fh5co-hero-smartphone {
@@ -601,6 +611,9 @@ html {
     width: 100%;
   }
 }
+
+
+
 @media screen and (max-width: 1200px) {
   body {
     overflow-x: hidden;
@@ -613,6 +626,9 @@ html {
     height: 550px;
   }
 }
+
+
+
 @media screen and (max-width: 993px) {
   body {
     overflow-x: hidden;
@@ -685,6 +701,9 @@ html {
     font-size: 20px;
   }
 }
+
+
+
 @media screen and (max-width: 993px) {
   .fh5co-features-grid-columns .col-sm-6 {
     -ms-flex: 0 0 50%;
@@ -784,6 +803,9 @@ html {
     font-size: 30px;
   }
 }
+
+
+
 @media screen and (max-width: 800px) {
   .fh5co-hero-inner > h1 {
     color: #fff;
@@ -927,6 +949,9 @@ html {
     margin-top: 100px;
   }
 }
+
+
+
 @media screen and (max-width: 520px) {
   #fh5co-hero-wrapper {
     height: 900px;
